Fixed color of search more link in dark mode

--- a/src/assets/stylesheets/main/layout/_search.scss
+++ b/src/assets/stylesheets/main/layout/_search.scss
@@ -569,7 +569,7 @@ $md-toggle__search--checked:
   // Search result container
   &__more summary {
     padding: px2em(12px) px2rem(16px);
-    color: var(--md-primary-fg-color);
+    color: var(--md-typeset-a-color);
     font-size: ms(-1);
     outline: 0;
     cursor: pointer;
